Problemdetails refactoring (#1491)
* feat(interceptor): print plugin for logging messages

* feat(interceptor): print plugin for logging messages

* refactor(soap):

Fixed deprecation

* docs: roadmap

* test:  fixes

* refactor(ProblemDetails): minor

* fix:  tests

* refactor: OpenAPI validator errors as ProblemJSON

* fix: type

* refactor: minor

* fix: logging