@@ -153,7 +153,7 @@ public abstract class OAuth2ResourceB2CTest {
 
 
         Exchange excCallResource = new Request.Builder().get(tc.getClientAddress() + "/malicious").buildExchange();
-        LOG.debug("getting " + excCallResource.getDestinations().get(0));
+        LOG.debug("getting {}", excCallResource.getDestinations().getFirst());
         browser.apply(excCallResource); // will be aborted
 
         browser.clearCookies(); // send the auth link to some helpless (other) user
@@ -436,7 +436,7 @@ public abstract class OAuth2ResourceB2CTest {
 
         ProblemDetails pd = ProblemDetails.parse(exc.getResponse());
         assertEquals("https://membrane-api.io/error/security/oauth2-error-from-authentication-server", pd.getType());
-        assertEquals("DEMO-123", pd.getExtensions().get("error"));
+        assertEquals("DEMO-123", pd.getInternal().get("error"));
     }
 
     @Test
